fix dark mode body style

--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,10 @@
 
 @layer base {
   body {
-    @apply bg-gray-50 text-gray-800 dark:bg-gray-900 dark:text-gray-100;
+    @apply bg-gray-50 text-gray-800;
+  }
+  .dark body {
+    @apply bg-gray-900 text-gray-100;
   }
 }
 
